<resources>
    <string name="app_name">erecruitment</string>
    <string name="app_names">e-recruitment app</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">sign in</string>
    <string name="nameapp">E-RECRUITMENT APP</string>
    <string name="welcome">e-recruitment</string>
    <string name="todo">todo</string>
    <string name="version">version 1.0</string>
    <string name="signin">Sign in</string>
    <string name="email">engelbertushendro10@gmail.com</string>
    <string name="register">Register</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="profile">Profile</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="username">username</string>
    <string name="send">send</string>
    <string name="logo">erecruitment</string>
    <string name="my_dashboard">Engelbertus Hendro</string>
    <string name="under_dsb">Sen, 18 okt 2020</string>
    <string name="Hallo">Hallo</string>
    <string name="search_text">Search Something</string>
    <string name="phone">082236695315</string>
    <string name="developer">Android Developer</string>
    <string name="address">Jl. Pratama No. 85 Nusa Dua</string>
    <string name="skill">Skill</string>
    <string name="job_success">Project Finish</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Project Aply</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
    <string name="email_l">email</string>
    <string name="dashboard">Dashboard</string>
    <string name="github">https://github.com/engelbertushendro10</string>
    <string name="input_email">input email</string>

</resources>