<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".App.Password.ResetPassword">
    <ImageView
        android:id="@+id/icon_login"
        android:layout_width="match_parent"
        android:layout_height="369dp"
        android:src="@drawable/login1r"
        android:background="@drawable/ic_login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp" />
    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/mycolor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/icon_login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="40sp"
        android:layout_marginTop="52dp"
        android:textSize="11dp"
        android:background="@drawable/grid_1"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forget"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/send_email"
        android:layout_width="180dp"
        android:layout_height="35sp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button"
        android:foregroundGravity="center_vertical"
        android:gravity="center"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>