<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".App.Register.RegisterActivity">

    <ImageView
        android:id="@+id/icon_login"
        android:layout_width="match_parent"
        android:layout_height="369dp"
        android:src="@drawable/login1r"
        android:background="@drawable/ic_login"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="3dp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/mycolor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/icon_login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="40sp"
        android:layout_marginTop="20dp"
        android:textSize="11dp"
        android:background="@drawable/grid_1"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        tools:ignore="Autofill,MissingConstraints" />
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40sp"
        android:layout_marginTop="16dp"
        android:textSize="11dp"
        android:background="@drawable/grid_1"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="Autofill,MissingConstraints" />

    <RadioButton
        android:id="@+id/radio_pirates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Accept End Register"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signup"
        android:layout_width="180dp"
        android:layout_height="35sp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button"
        android:foregroundGravity="center_vertical"
        android:gravity="center"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.179" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>