<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
    android:background="#ffffff"
tools:context=".fragments.ProfileFragment">

<RelativeLayout
    android:id="@+id/layotu_header"
    android:layout_width="match_parent"
    android:layout_height="144dp"
    android:background="@drawable/dashboard"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:text="@string/profile"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold" />

</RelativeLayout>

<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/pp_profile"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_marginTop="88dp"
    android:src="@drawable/mine"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="ContentDescription,MissingConstraints" />

<RelativeLayout
    android:id="@+id/bio"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="12dp"
    android:layout_marginTop="4dp"
    android:background="@drawable/radius_box"
    app:layout_constraintTop_toBottomOf="@+id/pp_profile"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-59dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/my_dashboard" />
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/email"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/tv_addres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/address"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tv_enginer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:gravity="center"
        android:layout_marginTop="70dp"/>
</RelativeLayout>

<RelativeLayout
    android:id="@+id/layout_skill"
    android:layout_width="match_parent"
    android:layout_height="214dp"
    android:layout_marginTop="40dp"
    app:layout_constraintTop_toBottomOf="@id/bio"
    tools:layout_editor_absoluteX="12dp">

    <TextView
        android:id="@+id/tv_skill"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/skill"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/skill1"
        android:layout_width="114dp"
        android:layout_height="37dp"
        android:layout_below="@+id/tv_skill"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="Kotlin"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/skill2"
        android:layout_width="114dp"
        android:layout_height="37dp"
        android:layout_below="@+id/tv_skill"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="Javascript"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/skill3"
        android:layout_width="101dp"
        android:layout_height="39dp"
        android:layout_below="@+id/tv_skill"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@+id/skill2"
        android:layout_toLeftOf="@+id/skill2"
        android:layout_toEndOf="@+id/skill1"
        android:layout_toRightOf="@+id/skill1"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="Golang"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/skill4"
        android:layout_width="114dp"
        android:layout_height="37dp"
        android:layout_below="@+id/skill3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="143dp"
        android:layout_marginRight="143dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="Laravel"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="472dp" />

    <TextView
        android:id="@+id/skill5"
        android:layout_width="114dp"
        android:layout_height="37dp"
        android:layout_below="@+id/skill1"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_toStartOf="@+id/skill4"
        android:layout_toLeftOf="@+id/skill4"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="Mysql"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="472dp" />

</RelativeLayout>

    <RelativeLayout
        android:id="@+id/sosmed"
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:layout_margin="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_skill"
        tools:layout_editor_absoluteX="54dp">

        <TextView
            android:id="@+id/icon_facebook"
            android:layout_width="139dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="181dp"
            android:layout_marginRight="181dp"
            android:layout_toEndOf="@+id/facebook"
            android:layout_toRightOf="@+id/facebook"
            android:text="facebook"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/intelij" />

        <TextView
            android:id="@+id/icon_ig"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_facebook"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@+id/facebook"
            android:layout_toRightOf="@+id/facebook"
            android:text="Instagram"
            android:textSize="18sp" />

        <ImageView

            android:id="@+id/ig"
            android:layout_width="64dp"
            android:layout_height="58dp"
            android:layout_below="@+id/facebook"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="77dp"
            android:layout_toStartOf="@+id/icon_facebook"
            android:layout_toLeftOf="@+id/icon_facebook"
            android:src="@drawable/intelij" />

        <ImageView

            android:id="@+id/github"
            android:layout_width="62dp"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="27dp"
            android:layout_toStartOf="@+id/icon_facebook"
            android:layout_toLeftOf="@+id/icon_facebook"
            android:src="@drawable/intelij" />

        <TextView
            android:id="@+id/icon_github"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_facebook"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="81dp"
            android:layout_toEndOf="@+id/github"
            android:layout_toRightOf="@+id/github"
            android:text="Github"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_calc"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="26dp"
            android:layout_toEndOf="@+id/icon_github"
            android:layout_toRightOf="@+id/icon_github"
            android:text="github" />

        <Button
            android:id="@+id/btn_dice"
            android:onClick="logouts"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginStart="49dp"
            android:layout_marginLeft="49dp"
            android:layout_toEndOf="@+id/icon_github"
            android:layout_toRightOf="@+id/icon_github"
            android:text="Fb" />

        <Button
            android:id="@+id/hitung"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_above="@+id/btn_calc"
            android:layout_below="@+id/icon_facebook"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:text="Ig" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>















